tests/run/error_unknown_fn.out
tests/run/error_unknown_fn.em:2:27: error: call to an undefined function
