tests/run/error_unknown_fn.em
// error_unknown_fn.em — calling an undefined function is a compile error.
fn main() -> int { return nope(1) }
